完善存储json的转换

--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "main": "dist/vue-store.js",
   "license": "MIT",
   "devDependencies": {
-    "del": "^2.2.1",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
-    "gulp-load-plugins": "^1.2.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-umd": "^0.2.0",
-    "yargs": "^4.7.1"
+    "yargs": "^4.8.1"
   },
   "dependencies": {
+    "next-js-core2": "github:smalleast/next-js-core2",
     "node-sass": "^4.5.3"
   }
 }
